GNOME Bugzilla – Bug 656089
g-ir-scanner generates warnings
Last modified: 2011-09-07 10:44:58 UTC
Hi, During build I get: g-ir-scanner: Emerillon: warning: 7 warnings suppressed (use --warn-all to see them) Enabling the warnings: window.h:62: Warning: Emerillon: emerillon_window_get_map_view: return value: Missing (transfer) annotation window.h:64: Warning: Emerillon: emerillon_window_get_ui_manager: return value: Missing (transfer) annotation window.c:989: Warning: Emerillon: emerillon_window_get_toolbar: return value: Missing (transfer) annotation window.c:1005: Warning: Emerillon: emerillon_window_get_sidebar: return value: Missing (transfer) annotation window.h:70: Warning: Emerillon: emerillon_window_get_statusbar: return value: Missing (transfer) annotation window.h:60: Warning: Emerillon: emerillon_window_dup_default: return value: Missing (transfer) annotation preferences.h:58: Warning: Emerillon: emerillon_preferences_dup_default: return value: Missing (transfer) annotation
Created attachment 193596 [details] [review] Add missing GIR annotations This patch adds the missing introspection annotations.
Comment on attachment 193596 [details] [review] Add missing GIR annotations Applied to the gtk3 branch, thanks!
OK, the gtk3 branch is merged into master. Thank you for your work, I really appreciate that!