Add missing introspection annotations, improve documentation

https://bugzilla.gnome.org/show_bug.cgi?id=656089