emerillon/preferences.c
@@ -102,6 +102,13 @@ emerillon_preferences_class_init (EmerillonPreferencesClass *klass)
   g_type_class_add_private (object_class, sizeof (EmerillonPreferencesPrivate));
 }
 
+/**
+ * emerillon_preferences_dup_default:
+ *
+ * Retrieves Emerillon's preferences
+ *
+ * Return value: (transfer none): A #GtkWidget containig the preferences
+ */
 GtkWidget *
 emerillon_preferences_dup_default (void)
 {
